inbox: Fix search icon position on narrow widths.
Due to filters dropdown's variable width, the search icon was
incorrectly positioned, we fix it by positioning it relative to
the filter dropdown.

--- a/web/styles/inbox.css
+++ b/web/styles/inbox.css
@@ -55,10 +55,14 @@
 
         #inbox-filters {
             .zulip-icon-search-inbox {
-                position: absolute;
-                top: 23px;
-                /* 5px (dropdown right margin) + 7.5px (= (30px left padding - 15px icon width) / 2)  = 12.5px */
-                left: calc(var(--width-inbox-filters-dropdown) + 12.5px);
+                position: relative;
+                /* We need to position the icon relative to the filters dropdown since its width is variable.
+                   To avoid icon from taking width since it is no longer absolute/fixed positioned, we set its width to 0. */
+                width: 0;
+                /* (30px filters height - 15px icon height) / 2)  = 7.5px */
+                top: 7.5px;
+                /* (30px left padding - 15px icon width) / 2)  = 7.5px */
+                left: 7.5px;
                 color: var(--color-icons-inbox);
                 opacity: 0.4;
             }
